<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

<!--
	* Note: this pom uses 'CI friendly' versioning. For more info see:
	* 	- https://maven.apache.org/maven-ci-friendly.html
	*
	* To build this project with a non-trivial version string, use the following command:
	* 	- mvn -D revision={version} clean package
	*
	* To build a container image, use the following command:
	* 	- mvn -D image.name=localhost/vacman-api spring-boot:build-image
	*
	* To check for depdency updates, use the following command:
	* 	- mvn versions:display-property-updates
	*
	* To download all dependencies and their sources, use the following command:
	* 	- mvn dependency:resolve dependency:resolve-sources
-->

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.4</version>
	</parent>


	<groupId>ca.gov.dts-stn.vacman</groupId>
	<artifactId>vacman-api</artifactId>
	<version>${revision}</version>


	<properties>
		<revision>0.0.0-00000000-00000</revision>

		<!-- container image parameters -->

		<image.name>localhost/vacman-api</image.name>

		<!-- build configuration parameters -->

		<java.version>21</java.version>

		<!-- dependency/plugin versions -->

		<immutables.version>2.11.1</immutables.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<record-builder.version>47</record-builder.version>
		<spring-boot-configuration-processor.version>3.5.4</spring-boot-configuration-processor.version>
		<springdoc.version>2.8.9</springdoc.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-otlp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>annotate</artifactId>
			<version>${immutables.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
		</dependency>

		<!-- Spring dependencies -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- optional/provided dependencies -->

		<dependency>
			<groupId>io.soabase.record-builder</groupId>
			<artifactId>record-builder-core</artifactId>
			<version>${record-builder.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>builder</artifactId>
			<version>${immutables.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.immutables</groupId>
			<artifactId>value</artifactId>
			<version>${immutables.version}</version>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
			<scope>provided</scope>
		</dependency>

		<!-- test dependencies -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<image>
						<name>${image.name}</name>
					</image>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.immutables</groupId>
							<artifactId>builder</artifactId>
							<version>${immutables.version}</version>
						</path>
						<path>
							<groupId>org.immutables</groupId>
							<artifactId>value</artifactId>
							<version>${immutables.version}</version>
						</path>
						<path>
							<groupId>io.soabase.record-builder</groupId>
							<artifactId>record-builder-processor</artifactId>
							<version>${record-builder.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>${spring-boot-configuration-processor.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/application-local.yml</exclude>
						<exclude>**/application-local.yaml</exclude>
						<exclude>**/application-local.properties</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<configuration>
					<abbrevLength>8</abbrevLength>
					<verbose>false</verbose>
				</configuration>
				<executions>
					<execution>
						<id>generate-build-version</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<configuration>
							<dateFormat>yyyyMMdd-HHmmss</dateFormat>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
